--- a/teste.ipynb
+++ b/teste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f9973cb7371b5c2be5f18a8b8225bf4e6ad54a34fb5872a1bc006d10d97ce0f1"
+  },
   "kernelspec": {
    "display_name": "Python 3.8.5 64-bit ('base': conda)",
    "language": "python",
