writing read functions

--- a/dataset/dataset-utl.ipynb
+++ b/dataset/dataset-utl.ipynb
@@ -40,6 +40,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NORMALISE_IMGS = True"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,31 +57,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def adjust_shape_img(I, s):\n",
+    "# need to test\n",
+    "def adjust_shape_img(I, shape):\n",
     "    \"\"\"Adjust shape of the grayscale image I to s\"\"\"\n",
-    "    print(\"adjust_shape()\")"
+    "    \n",
+    "    # crop\n",
+    "    I = I[:shape[0], :shape[1]]\n",
+    "    shape_img = I.shape\n",
+    "    \n",
+    "    # pad\n",
+    "    p0 = max(0, shape[0] - shape_img[0])\n",
+    "    p1 = max(0, shape[1] - shape_img[1])\n",
+    "    \n",
+    "    print(\"adjust_shape()\")\n",
+    "    return np.pad(I, ((0, p0), (0, p1)), 'edge')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Leitura das imagens do Sentinel-2 para bandas RBG."
+    "Leitura das imagens do Sentinel-2 para bandas RBG.\n",
+    "\n",
+    "#### io.imread\n",
+    "\n",
+    "```skimage.io.imread(fname, as_gray=False, plugin=None, **plugin_args)```\n",
+    "\n",
+    "#### numpy.stack\n",
+    "\n",
+    "```numpy.stack(arrays, axis=0, out=None)```\n",
+    "\n",
+    "Join a sequence of arrays along a new axis.\n",
+    "\n",
+    "#### numpy.mean\n",
+    "\n",
+    "``` numpy.mean(a, axis=None, dtype=None, out=None, keepdims=<no value>, *, where=<no value>)[source]```\n",
+    "\n",
+    "Compute the arithmetic mean along the specified axis. Returns the average of the array elements. \n",
+    "\n",
+    "#### numpy.std\n",
+    "\n",
+    "```numpy.std(arr, axis = None)```\n",
+    "\n",
+    "Compute the standard deviation of the given data (array elements) along the specified axis. Standard deviation is measured as the spread of data distribution in the given data set.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_sentinel_img(path):\n",
     "    \"\"\"Read cropped Sentinel-2 images: RGB bands\"\"\"\n",
-    "    print(\"read_sentinel_img()\")"
+    "    \n",
+    "    img_name = os.listdir(path)[0][:-7] # ?\n",
+    "    \n",
+    "    red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
+    "    green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
+    "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
+    "    \n",
+    "    I = np.stack((red, green, blue), axis=2).astype('float')\n",
+    "    \n",
+    "    if NORMALISE_IMGS:\n",
+    "        I = (I - I.mean()) / I.std() # I é torch?\n",
+    "    \n",
+    "    print(\"read_sentinel_img()\")\n",
+    "    return I"
    ]
   },
   {
@@ -84,13 +139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_sentinel_img_nir(path):\n",
-    "    \"\"\"Read cropped Sentinel-2 images: RGB bands\"\"\"\n",
-    "    print(\"read_sentinel_img_nir()\")"
+    "    \"\"\"Read cropped Sentinel-2 images: RGB bands + NIR\"\"\"\n",
+    "    \n",
+    "    img_name = os.listdir(path)[0][:-7]\n",
+    "    \n",
+    "    red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
+    "    green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
+    "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
+    "    nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
+    "    \n",
+    "    I = np.stack((red, green, blue, nir), axis=2).astype('float')\n",
+    "    \n",
+    "    if NORMALISE_IMGS:\n",
+    "        I = (I - I.mean()) / I.std()\n",
+    "    \n",
+    "    print(\"read_sentinel_img_nir()\")\n",
+    "    return I"
    ]
   },
   {
@@ -109,6 +178,15 @@
     "def read_sentinel_img_20(path):\n",
     "    \"\"\"Read cropped Sentinel-2 images: bandas resolution \n",
     "       less or equals to 20m\"\"\"\n",
+    "    \n",
+    "    img_name = os.listdir(path)[0][:-7]\n",
+    "    \n",
+    "    red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
+    "    green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
+    "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
+    "    nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
+    "    \n",
+    "    \n",
     "    print(\"read_sentinel_img_20()\")"
    ]
   },
@@ -227,14 +305,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class RandomRot\n"
+     ]
+    }
+   ],
    "source": [
     "class RandomRot():\n",
     "    \"\"\"Rotate randomly the images in a sample\"\"\"\n",
     "    print(\"class RandomRot\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.16619037896906\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'std'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-c19484e93eb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'std'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.a = [1, 2, 1, 3, 4]\n",
+    "print(np.std(a))\n",
+    "\n",
+    "b = [1, 3, 4, 2, 3]\n",
+    "print(b.std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
