adding a function to substitute all the other read_img

--- a/dataset/dataset-utl.ipynb
+++ b/dataset/dataset-utl.ipynb
@@ -52,12 +52,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ajuste da escala de cinza da imagem I para s."
+    "Ajuste da escala de cinza da imagem I para s. Ajusta as imagens que não são as 4 de resolução 10m."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_sentinel_img(path):\n",
+    "def read_sentinel_img_10(path):\n",
     "    \"\"\"Read cropped Sentinel-2 images: RGB bands\"\"\"\n",
     "    \n",
     "    img_name = os.listdir(path)[0][:-7] # ?\n",
@@ -126,7 +126,7 @@
     "    if NORMALISE_IMGS:\n",
     "        I = (I - I.mean()) / I.std() # I é torch?\n",
     "    \n",
-    "    print(\"read_sentinel_img()\")\n",
+    "    print(\"read_sentinel_img_10()\")\n",
     "    return I"
    ]
   },
@@ -166,12 +166,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Leitura das imagens do Sentinel-2 para bandas com resolução menor ou igual a 20m."
+    "Leitura das imagens do Sentinel-2 para bandas com resolução menor ou igual a 20m.\n",
+    "\n",
+    "#### scipy.ndimage.zoom\n",
+    "\n",
+    "```scipy.ndimage.zoom(input, zoom, output=None, order=3, mode='constant', cval=0.0, prefilter=True, *, grid_mode=False)```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +190,20 @@
     "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
     "    nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
     "    \n",
+    "    shape = red.shape\n",
+    "    \n",
+    "    ir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
+    "    ir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
+    "    ir3 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
+    "    ir4 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
+    "    \n",
+    "    swir1 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_1_20m), 2), s)\n",
+    "    swir2 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_2_20m), 2), s)\n",
+    "    \n",
+    "    I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
+    "    \n",
+    "    if NORMALISE_IMGS:\n",
+    "        I = (I - I.mean()) / I.std()\n",
     "    \n",
     "    print(\"read_sentinel_img_20()\")"
    ]
@@ -199,13 +217,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_sentinel_img_60(path):\n",
     "    \"\"\"Read cropped Sentinel-2 images: all bands\"\"\"\n",
+    "    \n",
+    "    img_name = os.listdir(path)[0][:-7]\n",
+    "    \n",
+    "    red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
+    "    green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
+    "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
+    "    nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
+    "    \n",
+    "    shape = red.shape\n",
+    "    \n",
+    "    ir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
+    "    ir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
+    "    ir3 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
+    "    ir4 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
+    "    \n",
+    "    swir1 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_1_20m), 2), s)\n",
+    "    swir2 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_2_20m), 2), s)\n",
+    "    \n",
+    "    uv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_AEROSOL_60m), 6), s)\n",
+    "    wv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
+    "    cir = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_CIRRUS_60m), 6), s)\n",
+    "    \n",
+    "    \n",
+    "    I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
+    "    \n",
+    "    if NORMALISE_IMGS:\n",
+    "        I = (I - I.mean()) / I.std()\n",
+    "    \n",
     "    print(\"read_sentinel_img_60()\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Criação de uma função mais abrnagente que substitua as acima: AINDA NÃO TESTADA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TO-DO: test this function\n",
+    "def read_sentinel_img(path, TYPE):\n",
+    "    \"\"\"Read cropped Sentinel-2 images: all bands\"\"\"\n",
+    "    \n",
+    "    img_name = os.listdir(path)[0][:-7]\n",
+    "    \n",
+    "    # 4 types\n",
+    "    if(TYPE ==(1|2|3|4)):\n",
+    "        red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
+    "        green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
+    "        blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
+    "        if(TYPE == 1):\n",
+    "            I = np.stack((red, green, blue), axis=2).astype('float')\n",
+    "    \n",
+    "    if(TYPE == (2|3|4)):\n",
+    "        nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
+    "        shape = red.shape\n",
+    "        if(TYPE == 2):\n",
+    "            I = np.stack((red, green, blue, nir), axis=2).astype('float')\n",
+    "    \n",
+    "    if(TYPE == (3|4)):\n",
+    "        ir1   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
+    "        ir2   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
+    "        ir3   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
+    "        ir4   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
+    "        swir1 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_1_20m), 2), s)\n",
+    "        swir2 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_2_20m), 2), s)\n",
+    "        if(TYPE == 3):\n",
+    "             I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
+    "        \n",
+    "    if(TYPE == 4):\n",
+    "        uv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_AEROSOL_60m), 6), s)\n",
+    "        wv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
+    "        cir = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_CIRRUS_60m), 6), s)\n",
+    "        \n",
+    "        I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
+    "    \n",
+    "    if NORMALISE_IMGS:\n",
+    "        I = (I - I.mean()) / I.std()\n",
+    "    \n",
+    "    print(\"read_sentinel_img()\")"
    ]
   },
   {
