--- a/main.ipynb
+++ b/main.ipynb
@@ -98,6 +98,7 @@
     "from pandas import read_csv\n",
     "from math import floor, ceil, sqrt, exp\n",
     "import time\n",
+    "from scipy.ndimage import zoom # zoom image\n",
     "# ...\n",
     "\n",
     "print(\"Others imported - Ok\")"
