read_sentinel_img_trio

--- a/dataset/dataset-utl.ipynb
+++ b/dataset/dataset-utl.ipynb
@@ -263,31 +263,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TO-DO: test this function\n",
-    "def read_sentinel_img(path, TYPE):\n",
+    "def read_sentinel_img(path):\n",
     "    \"\"\"Read cropped Sentinel-2 images: all bands\"\"\"\n",
     "    \n",
     "    img_name = os.listdir(path)[0][:-7]\n",
     "    \n",
-    "    # 4 types\n",
-    "    if(TYPE ==(1|2|3|4)):\n",
+    "    if TYPE ==(1|2|3|4):\n",
     "        red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
     "        green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
     "        blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
     "        if(TYPE == 1):\n",
     "            I = np.stack((red, green, blue), axis=2).astype('float')\n",
     "    \n",
-    "    if(TYPE == (2|3|4)):\n",
+    "    if TYPE == (2|3|4):\n",
     "        nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
     "        shape = red.shape\n",
     "        if(TYPE == 2):\n",
     "            I = np.stack((red, green, blue, nir), axis=2).astype('float')\n",
     "    \n",
-    "    if(TYPE == (3|4)):\n",
+    "    if TYPE == (3|4):\n",
     "        ir1   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
     "        ir2   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
     "        ir3   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
@@ -297,7 +296,7 @@
     "        if(TYPE == 3):\n",
     "             I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
     "        \n",
-    "    if(TYPE == 4):\n",
+    "    if TYPE == 4:\n",
     "        uv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_AEROSOL_60m), 6), s)\n",
     "        wv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
     "        cir = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_CIRRUS_60m), 6), s)\n",
@@ -323,9 +322,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_sentinel_img_type(path):\n",
+    "def read_sentinel_img_trio(path):\n",
     "    \"\"\"Read cropped Sentinel-2 image pairs and map of changes\"\"\"\n",
-    "    print(\"read_sentinel_img_type()\")"
+    "    \n",
+    "    # read the images based on the types\n",
+    "    # it was tested with the other functions\n",
+    "    # TO-DO: test with read_sentinel_img\n",
+    "    # TYPE is defined globally\n",
+    "    I1 = read_sentinel_img(path + IMG_1)\n",
+    "    I2 = read_sentinel_img(path + IMG_2)\n",
+    "    \n",
+    "    cm = io.imread(path + IMG_CM, as_gray=True) != 0\n",
+    "    \n",
+    "    # crop if necessary\n",
+    "    shape1 = I1.shape\n",
+    "    shape2 = I2.shape\n",
+    "    \n",
+    "    # TO-DO: why just I2?\n",
+    "    I2 = np.pad(I2, ((0, shape1[0] - shape2[0]), (0, shape1[1] - shape2[1]), (0, 0)), 'edge')\n",
+    "    \n",
+    "    print(\"read_sentinel_img_trio()\")\n",
+    "    return I1, I2, cm"
    ]
   },
   {
