rot and flip function implementations

--- a/dataset/dataset-utl.ipynb
+++ b/dataset/dataset-utl.ipynb
@@ -349,18 +349,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transposição das imagens para PyTorch."
+    "Transposição das imagens para PyTorch.\n",
+    "\n",
+    "#### numpy.transpose\n",
+    "\n",
+    "```numpy.transpose(a, axes=None)```\n",
+    "\n",
+    "Reverse or permute the axes of an array; returns the modified array. For an array a with two axes, transpose(a) gives the matrix transpose.\n",
+    "\n",
+    "#### torch.from_numpy\n",
+    "\n",
+    "```torch.from_numpy(ndarray) → Tensor```\n",
+    "\n",
+    "Creates a Tensor from a numpy.ndarray. The returned tensor and ndarray share the same memory. Modifications to the tensor will be reflected in the ndarray and vice versa. The returned tensor is not resizable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reshape_torch(I):\n",
     "    \"\"\"Transpose images for PyTorch coordinates\"\"\"\n",
-    "    print(\"reshape_torch()\")"
+    "    \n",
+    "    I_t = I.transpose((2, 0, 1))\n",
+    "    \n",
+    "    print(\"reshape_torch()\")\n",
+    "    return torch.from_numpy(I_t)"
    ]
   },
   {
@@ -386,6 +402,15 @@
    "source": [
     "class ChangeDetectionDataset():\n",
     "    \"\"\"Change Detection dataset class. For training and testing data\"\"\"\n",
+    "    \n",
+    "    def __init__(self, path, train = True, patch_side = PATCH_SIDE, stride = None, use_all_bands = False, transform=None):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            csv_file (string): path to the csv file with annotations\n",
+    "            root_dir (string): directory with all the images\n",
+    "            transform (callable, optional): optional transform to be applied on a sample\n",
+    "        \"\"\"\n",
+    "        \n",
     "    print(\"class ChangeDetectionDataset\")"
    ]
   },
@@ -393,26 +418,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gira aleatoriamente as imagens em uma amostra."
+    "Gira aleatoriamente as imagens em uma amostra.\n",
+    "\n",
+    "#### __call__\n",
+    "\n",
+    "The ```__call__``` method enables programmers to write classes where the instances behave like functions and can be called like a function. When the instance is called as a function; if this method is defined, ```x(arg1, arg2, ...)``` is a shorthand for ```x.__call__(arg1, arg2, ...)```.\n",
+    "\n",
+    "```__init__``` is used to initialise newly created objects - ```x = Foo(1, 2, 3)```. ```__call__``` implements function call operator - ```x(1, 2, 3)```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "class RandomFlip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class RandomFlip():\n",
     "    \"\"\"Flip randomly the images in a sample\"\"\"\n",
-    "    print(\"class RandomFlip\")"
+    "    \n",
+    "    def __call__(self, sample):\n",
+    "        I1, I2, label = sample['I1'], sample['I2'], sample['label']\n",
+    "        \n",
+    "        if random.random() > 0.5: # ? TO-DO: try undesrtand this part\n",
+    "            I1 = I1.numpy()[:, :, ::-1].copy()\n",
+    "            I1 = torch.from_numpy(I1)\n",
+    "            \n",
+    "            I2 = I2.numpy()[:, :, ::-1].copy()\n",
+    "            I2 = torch.from_numpy(I2)\n",
+    "            \n",
+    "            label = label.numpy()[:, :, ::-1].copy()\n",
+    "            label = torch.from_numpy(label)\n",
+    "            \n",
+    "            print(\"class RandomFlip\")\n",
+    "            return {'I1': I1, 'I2': I2, 'label': label}"
    ]
   },
   {
@@ -424,62 +462,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "class RandomRot\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class RandomRot():\n",
     "    \"\"\"Rotate randomly the images in a sample\"\"\"\n",
-    "    print(\"class RandomRot\")"
+    "    \n",
+    "    def __call__(self, sample):\n",
+    "        I1, I2, label = sample['I1'], sample['I2'], sample['label']\n",
+    "        \n",
+    "        n = random.randint(0, 3) # TO-DO: unsdestand better\n",
+    "        if n:\n",
+    "            I1 = sample['I1'].numpy()\n",
+    "            I1 = np.rot90(I1, n, axes=(1, 2)).copy()\n",
+    "            I1 = torch.from_numpy(I1)\n",
+    "            \n",
+    "            I2 = sample['I2'].numpy()\n",
+    "            I2 = np.rot90(I2, n, axes=(1, 2)).copy()\n",
+    "            I2 = torch.from_numpy(I2)\n",
+    "            \n",
+    "            label = sample['label'].numpy()\n",
+    "            label = np.rot0(label, n, axes=(0, 1)).copy()\n",
+    "            label = torch.from_numpy(label)\n",
+    "            \n",
+    "        print(\"class RandomRot\")\n",
+    "        return {'I1': I1, 'I2': I2, 'label': label}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.16619037896906\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'std'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-c19484e93eb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'std'"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "np.a = [1, 2, 1, 3, 4]\n",
-    "print(np.std(a))\n",
-    "\n",
-    "b = [1, 3, 4, 2, 3]\n",
-    "print(b.std)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
